<resources>
    <string name="app_name">moneymate</string>
    <string name="account_title_label">Title</string>
    <string name="account_title_hint">Enter a title for the account</string>
    <string name="currency_title_label">Currency</string>
    <string name="currency_title_hint">Enter currency title</string>
    <string name="new_account">New account</string>
    <string name="account_note_hint">Enter note for the account</string>
    <string name="account_note_label">Note</string>
    <string name="category_title_hint">Enter category title</string>
    <string name="category_title_label">Category title</string>
    <string name="new_currency">New currency</string>
    <string name="account_currency_label">Currency</string>
    <string name="currency_code_label">Currency code</string>
    <string name="currency_code_hint">Enter currency code</string>
    <string name="currency_default_label">Default currency</string>
    <string name="category_type_label">Type</string>
    <string name="category_type_hint">Enter category type (+=1/-=-1)</string>
    <string name="new_category">New category</string>
    <string name="bottom_nav_item_budget">Budget</string>
    <string name="bottom_nav_item_accounts">Accounts</string>
    <string name="bottom_nav_item_categories">Categories</string>
    <string name="bottom_nav_item_projects">Projects</string>
    <string name="bottom_nav_item_currencies">Currencies</string>
    <string name="default_transaction_date">Wed Dec 02 00:33 EST 2021</string>
    <string name="new_transaction">Add transaction</string>
    <string name="category_default_label">Default</string>
    <string name="account_initial_balance_label">Initial balance</string>
    <string name="account_current_balance_label">Current balance</string>
    <string name="account_initial_balance_hint">Enter initial balance</string>
    <string name="project_title_hint">Enter project tite</string>
    <string name="project_title_label">Title</string>
    <string name="new_project">New project</string>
    <string name="project_default_label">Default</string>
    <string name="fragment_name_account">Account</string>
    <string name="fragment_name_transaction">Transaction</string>
    <string name="fragment_name_currency">Currency</string>
    <string name="fragment_name_project">Project</string>
    <string name="fragment_name_category">Category</string>
    <string name="predef_empty_project_title">No project</string>
    <string name="predef_category_title_food">Food</string>
    <string name="predef_category_title_salary">Salary</string>
    <string name="predef_account_title_cash">Cash</string>
    <string name="transaction_account_label">Account</string>
    <string name="transaction_category_label">Category</string>
    <string name="transaction_project_label">Project</string>
    <string name="btn_load_from_cvs_title">Load from CVS</string>
    <string name="settings_menu_title">Settings</string>
    <string name="payee_menu_title">Payees</string>
    <string name="button_ok_text">Save</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="notification_channel_name">Init DB with backup data</string>
    <string name="notification_caption">DB filling</string>
    <string name="notification_text">DB filled successfully</string>
    <string name="transaction_list_convert_account_title">%1$s >> %2$s</string>
    <string name="new_convertation">Convertation</string>
    <string name="pref_label_main">Main</string>
</resources>