<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.category.CategoryFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/image_button_category_type"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_income_36">

    </androidx.appcompat.widget.AppCompatImageButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/category_title_label"
        app:layout_constraintBottom_toBottomOf="@+id/category_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/category_title"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/category_title_hint"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image_button_category_type"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_type_label"
        app:layout_constraintBottom_toBottomOf="@+id/category_type"
        app:layout_constraintEnd_toEndOf="@+id/category_title_label"
        app:layout_constraintTop_toTopOf="@+id/category_type" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:hint="@string/category_type_hint"
        app:layout_constraintStart_toEndOf="@+id/category_type_label"
        app:layout_constraintTop_toBottomOf="@+id/category_title"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/category_isDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category_default_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_type_label" />

</androidx.constraintlayout.widget.ConstraintLayout>